--- a/StorageApplication/.vscode/settings.json
+++ b/StorageApplication/.vscode/settings.json
@@ -1,11 +1,16 @@
 {
     "cSpell.words": [
+        "ADATAI",
         "Bejelentkezés",
+        "Felhasználók",
         "felhasználónév",
         "folytatáshoz",
         "istorage",
         "jelentkezzen",
         "jelszó",
-        "kérem"
+        "kérem",
+        "LÁTSZIK",
+        "LESZNEK",
+        "Pressable"
     ]
 }
