--- a/StorageApplication/package.json
+++ b/StorageApplication/package.json
@@ -20,7 +20,9 @@
     "@react-navigation/native-stack": "^6.1.0",
     "@react-navigation/stack": "^6.0.11",
     "@types/hammerjs": "^2.0.41",
+    "axios": "^0.25.0",
     "body-parser": "^1.19.1",
+    "crypto": "^1.0.1",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.4",
     "expo-constants": "~13.0.0",
