--- a/StorageApplication/package.json
+++ b/StorageApplication/package.json
@@ -34,6 +34,7 @@
     "expo-web-browser": "~10.1.0",
     "express": "^4.17.2",
     "mysql": "^2.18.1",
+    "nodemon": "^2.0.15",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-lifecycles-compat": "^3.0.4",
