--- a/StorageApplication/package.json
+++ b/StorageApplication/package.json
@@ -21,7 +21,9 @@
     "@react-navigation/stack": "^6.0.11",
     "@types/hammerjs": "^2.0.41",
     "axios": "^0.25.0",
+    "axois": "^0.0.1-security",
     "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.4",
@@ -44,7 +46,8 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "sequelize": "^6.16.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
