--- a/StorageApplication/package.json
+++ b/StorageApplication/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.5",
+    "@react-native-community/art": "^1.2.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.1.0",
@@ -43,12 +44,15 @@
     "react-native": "0.64.3",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-pie": "^1.1.2",
+    "react-native-pie-chart": "^2.0.2",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-svg": "12.1.1",
+    "react-native-svg": "^12.1.1",
     "react-native-web": "0.17.1",
-    "sequelize": "^6.16.1"
+    "sequelize": "^6.16.1",
+    "victory-pie": "^36.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
