login input color setting, unknow words felvétele

--- a/StorageApplication/.vscode/settings.json
+++ b/StorageApplication/.vscode/settings.json
@@ -1,16 +1,31 @@
 {
     "cSpell.words": [
         "ADATAI",
+        "beerkezett",
+        "Beérkezett",
         "Bejelentkezés",
+        "berendelt",
+        "diagramdata",
+        "Entypo",
+        "feher",
         "Felhasználók",
         "felhasználónév",
         "folytatáshoz",
+        "Fontisto",
+        "hány",
+        "hely",
         "istorage",
         "jelentkezzen",
         "jelszó",
         "kérem",
         "LÁTSZIK",
         "LESZNEK",
-        "Pressable"
+        "levonja",
+        "mert",
+        "mindig",
+        "nevek",
+        "Pressable",
+        "Raktár",
+        "teltsége"
     ]
 }
