progress bar get a good number

--- a/StorageApplication/.vscode/settings.json
+++ b/StorageApplication/.vscode/settings.json
@@ -25,7 +25,10 @@
         "mindig",
         "nevek",
         "Pressable",
+        "querys",
         "Raktár",
+        "somuch",
+        "szam",
         "teltsége"
     ]
 }
