server.js szétszedése, mostmár a node index.js-sel indul a backand

--- a/StorageApplication/package.json
+++ b/StorageApplication/package.json
@@ -26,6 +26,8 @@
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "es6": "^0.0.7",
+    "esm": "^3.2.25",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.4",
     "expo-constants": "~13.0.0",
