raktár adat lekérése, elhelyezése, kezdőlapon a divek formázása

--- a/StorageApplication/.vscode/settings.json
+++ b/StorageApplication/.vscode/settings.json
@@ -27,6 +27,8 @@
         "istorage",
         "jelentkezzen",
         "jelszó",
+        "kapacitás",
+        "kapacitása",
         "kérem",
         "készülékek",
         "Kezdőlap",
@@ -50,6 +52,7 @@
         "Raktárosok",
         "somuch",
         "szam",
+        "Teljes",
         "teltsége",
         "userdata",
         "warehousefull"
