új screen amin a berendelt termékek lesznek majd láthatóak, ennek a screenek a beállítása(navigáció, megjelenés)

--- a/StorageApplication/.vscode/settings.json
+++ b/StorageApplication/.vscode/settings.json
@@ -40,6 +40,7 @@
         "mert",
         "mindig",
         "nevek",
+        "normalicon",
         "ondelivery",
         "osszes",
         "Pressable",
@@ -50,6 +51,7 @@
         "raktárba",
         "raktárban",
         "Raktárosok",
+        "smalicon",
         "somuch",
         "szam",
         "Teljes",
