stock elkezdve, dátumot parsolni kell és kiiratni normálisan

--- a/StorageApplication/.vscode/settings.json
+++ b/StorageApplication/.vscode/settings.json
@@ -8,6 +8,7 @@
         "berendelt",
         "currentlyinstock",
         "darab",
+        "Dátum",
         "deliverynumber",
         "diagramdata",
         "Entypo",
@@ -18,6 +19,7 @@
         "feher",
         "Felhasználók",
         "felhasználónév",
+        "fentről",
         "folytatáshoz",
         "Fontisto",
         "haladva",
@@ -33,6 +35,7 @@
         "készülékek",
         "Kezdőlap",
         "kifelé",
+        "körből",
         "LÁTSZIK",
         "LESZNEK",
         "levonja",
@@ -54,6 +57,7 @@
         "smalicon",
         "somuch",
         "szam",
+        "szarul",
         "Teljes",
         "teltsége",
         "userdata",
