--- a/StorageApplication/package.json
+++ b/StorageApplication/package.json
@@ -38,9 +38,11 @@
     "expo-status-bar": "~1.2.0",
     "expo-web-browser": "~10.1.0",
     "express": "^4.17.2",
+    "moment": "^2.29.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.15",
     "react": "17.0.1",
+    "react-datetime": "^3.1.1",
     "react-dom": "17.0.1",
     "react-lifecycles-compat": "^3.0.4",
     "react-native": "0.64.3",
