Beérkező telefonok component, dateformat

--- a/StorageApplication/.vscode/settings.json
+++ b/StorageApplication/.vscode/settings.json
@@ -3,6 +3,7 @@
         "ADATAI",
         "beerkezett",
         "Beérkezett",
+        "Beérkező",
         "Bejelentkezés",
         "bentről",
         "berendelt",
