--- a/StorageApplication/package.json
+++ b/StorageApplication/package.json
@@ -26,6 +26,7 @@
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "date-fns": "^2.28.0",
     "es6": "^0.0.7",
     "esm": "^3.2.25",
     "expo": "~44.0.0",
