--- a/StorageApplication/package.json
+++ b/StorageApplication/package.json
@@ -59,6 +59,7 @@
     "react-native-svg": "^12.1.1",
     "react-native-web": "0.17.1",
     "react-progress-label": "^3.1.7",
+    "react-string-format": "^1.0.0",
     "sequelize": "^6.16.1",
     "victory-pie": "^36.3.0"
   },
