tőlünk rendelt telefonok kilistázása az adott hónapban

--- a/StorageApplication/.vscode/settings.json
+++ b/StorageApplication/.vscode/settings.json
@@ -12,6 +12,7 @@
         "Dátum",
         "deliverynumber",
         "diagramdata",
+        "Eladva",
         "Entypo",
         "erkezik",
         "Érkezik",
@@ -56,6 +57,7 @@
         "raktárban",
         "Raktárosok",
         "smalicon",
+        "Solds",
         "somuch",
         "szam",
         "szarul",
