Login screen apróbb módosítások

--- a/StorageApplication/.vscode/settings.json
+++ b/StorageApplication/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "ADATAI",
+        "akthonap",
         "beerkezett",
         "Beérkezett",
         "Beérkező",
@@ -12,6 +13,7 @@
         "Dátum",
         "deliverynumber",
         "diagramdata",
+        "eladottszov",
         "Eladva",
         "Entypo",
         "erkezik",
@@ -56,6 +58,7 @@
         "raktárba",
         "raktárban",
         "Raktárosok",
+        "sikeres",
         "smalicon",
         "Solds",
         "somuch",
