--- a/StorageApplication/package.json
+++ b/StorageApplication/package.json
@@ -23,9 +23,12 @@
     "@types/hammerjs": "^2.0.41",
     "axios": "^0.25.0",
     "axois": "^0.0.1-security",
+    "bcr": "^1.0.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "crypto-js": "^4.1.1",
     "date-fns": "^2.28.0",
     "es6": "^0.0.7",
     "esm": "^3.2.25",
@@ -40,7 +43,9 @@
     "expo-status-bar": "~1.2.0",
     "expo-web-browser": "~10.1.0",
     "express": "^4.17.2",
+    "express-validator": "^6.14.0",
     "moment": "^2.29.1",
+    "mongoose": "^6.2.4",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.15",
     "qs": "^6.10.3",
@@ -49,6 +54,7 @@
     "react-dom": "17.0.1",
     "react-lifecycles-compat": "^3.0.4",
     "react-native": "0.64.3",
+    "react-native-bcrypt": "^2.4.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-pie": "^1.1.2",
