a raktárban dolgozó emberek megjelenítése számban, már csak az elemet designolni kell, de az adatok jól jönnek át

--- a/StorageApplication/.vscode/settings.json
+++ b/StorageApplication/.vscode/settings.json
@@ -13,6 +13,7 @@
         "Dátum",
         "deliverynumber",
         "diagramdata",
+        "dolgozik",
         "eladottszov",
         "Eladva",
         "Entypo",
