raktáron lévő készülékek (scrren, lekérdezés, element, style)

--- a/StorageApplication/.vscode/settings.json
+++ b/StorageApplication/.vscode/settings.json
@@ -58,6 +58,7 @@
         "raktarba",
         "raktárba",
         "raktárban",
+        "Raktáron",
         "Raktárosok",
         "sikeres",
         "smalicon",
