--- a/StorageApplication/package.json
+++ b/StorageApplication/package.json
@@ -44,6 +44,7 @@
     "expo-web-browser": "~10.1.0",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
+    "luxon": "^2.3.1",
     "moment": "^2.29.1",
     "mongoose": "^6.2.4",
     "mysql": "^2.18.1",
