--- a/StorageApplication/.vscode/settings.json
+++ b/StorageApplication/.vscode/settings.json
@@ -20,6 +20,7 @@
         "erkezik",
         "Érkezik",
         "érkeznek",
+        "Érkező",
         "eszköz",
         "feher",
         "Felhasználók",
@@ -45,6 +46,7 @@
         "LESZNEK",
         "levonja",
         "Márkák",
+        "menüponton",
         "mert",
         "mindig",
         "nevek",
@@ -66,6 +68,7 @@
         "somuch",
         "szam",
         "szarul",
+        "található",
         "Teljes",
         "teltsége",
         "tudnak",
