Textek áthelyezése másik fájlba és onnan való belinkelése

--- a/StorageApplication/.vscode/settings.json
+++ b/StorageApplication/.vscode/settings.json
@@ -1,16 +1,19 @@
 {
     "cSpell.words": [
+        "actualmonth",
         "ADATAI",
         "akthonap",
         "beerkezett",
         "Beérkezett",
         "Beérkező",
         "Bejelentkezés",
+        "belülről",
         "bentről",
         "berendelt",
         "currentlyinstock",
         "darab",
         "Dátum",
+        "Delevery",
         "deliverynumber",
         "diagramdata",
         "dolgozik",
@@ -45,7 +48,9 @@
         "LÁTSZIK",
         "LESZNEK",
         "levonja",
+        "magyarázat",
         "Márkák",
+        "menüpontban",
         "menüponton",
         "mert",
         "mindig",
@@ -53,6 +58,7 @@
         "normalicon",
         "ondelivery",
         "osszes",
+        "phonedata",
         "Pressable",
         "progressbar",
         "querys",
