Linegradient kihelyezése külön fájlba, majd behivatkozás mindenhol

--- a/StorageApplication/.vscode/settings.json
+++ b/StorageApplication/.vscode/settings.json
@@ -48,6 +48,8 @@
         "LÁTSZIK",
         "LESZNEK",
         "levonja",
+        "linegradent",
+        "linegradient",
         "magyarázat",
         "Márkák",
         "menüpontban",
