kód finomítása, react hook form install

--- a/StorageApplication/.vscode/settings.json
+++ b/StorageApplication/.vscode/settings.json
@@ -37,6 +37,7 @@
         "hely",
         "Instore",
         "instoreage",
+        "Ionicons",
         "istorage",
         "jelentkezzen",
         "jelszó",
