--- a/StorageApplication/package.json
+++ b/StorageApplication/package.json
@@ -53,6 +53,7 @@
     "react": "17.0.1",
     "react-datetime": "^3.1.1",
     "react-dom": "17.0.1",
+    "react-hook-form": "^7.27.1",
     "react-lifecycles-compat": "^3.0.4",
     "react-native": "0.64.3",
     "react-native-bcrypt": "^2.4.0",
