felhasználók username, password lekérése; Login scrren inputok lementése; Base64 telepítése, importálása a visszafejtéshez

--- a/StorageApplication/.vscode/settings.json
+++ b/StorageApplication/.vscode/settings.json
@@ -24,6 +24,7 @@
         "Érkezik",
         "érkeznek",
         "Érkező",
+        "errortext",
         "eszköz",
         "feher",
         "Felhasználók",
@@ -35,6 +36,7 @@
         "Hamarosan",
         "hány",
         "hely",
+        "Hiba",
         "Instore",
         "instoreage",
         "Ionicons",
@@ -48,6 +50,7 @@
         "Kezdőlap",
         "kifelé",
         "körből",
+        "kötelező",
         "LÁTSZIK",
         "LESZNEK",
         "levonja",
@@ -56,6 +59,7 @@
         "listnames",
         "magyarázat",
         "Márkák",
+        "megadása",
         "menüpontban",
         "menüponton",
         "mert",
