--- a/StorageApplication/package.json
+++ b/StorageApplication/package.json
@@ -44,6 +44,7 @@
     "expo-web-browser": "~10.1.0",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
+    "formik": "^2.2.9",
     "js-base64": "^3.7.2",
     "luxon": "^2.3.1",
     "moment": "^2.29.1",
@@ -72,7 +73,8 @@
     "react-progress-label": "^3.1.7",
     "react-string-format": "^1.0.0",
     "sequelize": "^6.16.1",
-    "victory-pie": "^36.3.0"
+    "victory-pie": "^36.3.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
