login backend, apro design - margin, padding

--- a/StorageApplication/.vscode/settings.json
+++ b/StorageApplication/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "actualmonth",
         "ADATAI",
+        "adatbevitel",
         "akthonap",
         "beerkezett",
         "Beérkezett",
@@ -37,6 +38,7 @@
         "hány",
         "hely",
         "Hiba",
+        "Hibás",
         "Instore",
         "instoreage",
         "Ionicons",
