--- a/StorageApplication/package.json
+++ b/StorageApplication/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native-stack": "^6.1.0",
     "@react-navigation/stack": "^6.0.11",
     "@types/hammerjs": "^2.0.41",
+    "argon2": "^0.28.5",
     "axios": "^0.25.0",
     "axois": "^0.0.1-security",
     "bcr": "^1.0.0",
@@ -45,6 +46,7 @@
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
     "formik": "^2.2.9",
+    "hash-wasm": "^4.9.0",
     "js-base64": "^3.7.2",
     "luxon": "^2.3.1",
     "moment": "^2.29.1",
