--- a/StorageApplication/.vscode/settings.json
+++ b/StorageApplication/.vscode/settings.json
@@ -59,6 +59,7 @@
         "linegradent",
         "linegradient",
         "listnames",
+        "logindata",
         "magyarázat",
         "Márkák",
         "megadása",
