input kiürítése elküldés után

--- a/StorageApplication/.vscode/settings.json
+++ b/StorageApplication/.vscode/settings.json
@@ -67,6 +67,7 @@
         "menüponton",
         "mert",
         "mindig",
+        "myapp",
         "nevek",
         "normalicon",
         "ondelivery",
