összes szín kirakása egy külön fájlba és onnan behivatkozás

--- a/StorageApplication/.vscode/settings.json
+++ b/StorageApplication/.vscode/settings.json
@@ -4,6 +4,7 @@
         "ADATAI",
         "adatbevitel",
         "akthonap",
+        "backcolor",
         "beerkezett",
         "Beérkezett",
         "Beérkező",
@@ -13,6 +14,8 @@
         "berendelt",
         "currentlyinstock",
         "darab",
+        "darkerblue",
+        "darkersidebar",
         "Dátum",
         "Delevery",
         "deliverynumber",
@@ -25,14 +28,17 @@
         "Érkezik",
         "érkeznek",
         "Érkező",
+        "errorred",
         "errortext",
         "eszköz",
+        "extralightblue",
         "feher",
         "Felhasználók",
         "felhasználónév",
         "fentről",
         "folytatáshoz",
         "Fontisto",
+        "grayblue",
         "haladva",
         "Hamarosan",
         "hány",
@@ -92,6 +98,7 @@
         "található",
         "Teljes",
         "teltsége",
+        "topnavbar",
         "tudnak",
         "userdata",
         "warehousefull"
