component, element kirakása külön fájlba és onnan behivatkozni => a kód rövidítése, szétbontása a lehető legegyszerűbbre

--- a/StorageApplication/.vscode/settings.json
+++ b/StorageApplication/.vscode/settings.json
@@ -76,6 +76,7 @@
         "myapp",
         "nevek",
         "normalicon",
+        "notmatching",
         "ondelivery",
         "osszes",
         "outestorage",
@@ -90,6 +91,7 @@
         "Raktáron",
         "Raktárosok",
         "sikeres",
+        "Sikertelen",
         "smalicon",
         "Solds",
         "somuch",
