--- a/StorageApplication/package.json
+++ b/StorageApplication/package.json
@@ -45,6 +45,7 @@
     "expo-web-browser": "~10.1.0",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
+    "firebase": "^9.6.10",
     "formik": "^2.2.9",
     "hash-wasm": "^4.9.0",
     "js-base64": "^3.7.2",
@@ -76,6 +77,7 @@
     "react-string-format": "^1.0.0",
     "sequelize": "^6.16.1",
     "victory-pie": "^36.3.0",
+    "xcode": "^3.0.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
