--- a/StorageApplication/.vscode/settings.json
+++ b/StorageApplication/.vscode/settings.json
@@ -9,6 +9,7 @@
         "Beérkezett",
         "Beérkező",
         "Bejelentkezés",
+        "bejelentkezési",
         "belülről",
         "bentről",
         "berendelt",
@@ -35,6 +36,7 @@
         "feher",
         "Felhasználók",
         "felhasználónév",
+        "felületre",
         "fentről",
         "folytatáshoz",
         "Fontisto",
@@ -54,6 +56,7 @@
         "kapacitás",
         "kapacitása",
         "kérem",
+        "keresett",
         "készülékek",
         "Kezdőlap",
         "kifelé",
@@ -103,6 +106,7 @@
         "topnavbar",
         "tudnak",
         "userdata",
+        "visszajut",
         "warehousefull"
     ]
 }
